--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: sans-serif;
+  color: #555;
+}
+
 /*
 header
 */
@@ -30,15 +35,21 @@ aside
 
 .upper-case {
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 aside {
-  font-family: sans-serif;
-  color: gray;
+  display: inline-block;
+  color: lightgray;
   float: left;
   font-size: .75rem;
   padding: 3% 4% 9% 13%;
   width: 35%;
+
+}
+
+aside h4 {
+  color: gray;
 }
 
 aside p {
@@ -47,13 +58,31 @@ aside p {
   border-bottom: 1px solid lightgray;
 }
 
-aside label {
-  padding: px;
+aside input {
+  margin-top: 16px;
+  height: 24px;
 }
 
 /*
 main
 */
+main {
+  display: inline-block;
+  width: 60%;
+  overflow: hidden;
+}
+
+main h2 {
+  font-size: 2.0rem;
+}
+
+main p {
+
+  font-style: italic;
+  font-size: 0.75rem;
+}
+
+
 
 span.iron-yard {
   font-style: italic;
